<resources>
    <string name="app_name">Minimal Launcher</string>
    <string name="app_icon_desc">App icon</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="sort_order">App List Sort Order</string>
    <string name="sort_alpha">Alphabetical</string>
    <string name="sort_install">Install Date</string>
    <string name="show_utc_clock">Show UTC Clock</string>
    <string name="show_date">Show Date</string>
    <string name="enable_icon_colors">Enable Icon Colors</string>
    <string name="clock_timezone">Clock Timezone</string>
    <string name="timezone_hint">e.g. America/New_York</string>
</resources>
